--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,23 @@
 # Build and Release Folders
-bin-debug/
-bin-release/
-[Oo]bj/
-[Bb]in/
-
+#bin-debug/
+#bin-release/
+#[Oo]bj/
+#[Bb]in/
 # Other files and folders
-.settings/
+#.settings/
+
+mcu/MDK-ARM/DebugConfig/
+mcu/MDK-ARM/boat2021/
+mcu/MDK-ARM/RTE/
+mcu/MDK-ARM/startup_stm32f405xx.lst
+mcu/MDK-ARM/JLinkLog.txt
+mcu/MDK-ARM/*.uvguix.*
+*.o
+
+
+
 
 # Executables
-*.swf
-*.air
-*.ipa
-*.apk
 
-# Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
-# should NOT be excluded as they contain compiler settings and other important
-# information for Eclipse / Flash Builder.
+
+
